--- a/GrandadAudioPlayer/Properties/Resources.resx
+++ b/GrandadAudioPlayer/Properties/Resources.resx
@@ -90,6 +90,7 @@
               <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
             </xsd:complexType>
           </xsd:element>
+          <!-- ReSharper disable once MarkupAttributeTypo -->
           <xsd:element name="resheader">
             <xsd:complexType>
               <xsd:sequence>
@@ -103,6 +104,7 @@
     </xsd:element>
   </xsd:schema>
   <resheader name="resmimetype">
+    <!-- ReSharper disable once MarkupTextTypo -->
     <value>text/microsoft-resx</value>
   </resheader>
   <resheader name="version">
